--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -74,8 +74,10 @@ html, body {
   // This is the logo at the top of the ToC
   .logo {
     display: block;
-    max-width: 100%;
+    max-width: 50%;
     margin-bottom: $logo-margin;
+    margin-top: 10px;
+    margin-left: 10px;
   }
 
   &>.search {
